--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ body {
 
 .section-about {
   background-color: #f7f7f7;
-  padding: 25rem 0;
+  padding: 25rem 0 30rem 0;
   margin-top: -25vh; }
 
 .section-features {
@@ -115,7 +115,7 @@ body {
   background-image: linear-gradient(to right bottom, rgba(0, 0, 128, 0.8), rgba(10, 166, 244, 0.8)), url("https://images.unsplash.com/photo-1534406315430-4d7cf92bc690?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80");
   background-size: cover;
   transform: skewY(-5deg);
-  margin-top: -1rem; }
+  margin-top: -8rem; }
   .section-features > * {
     transform: skewY(5deg); }
 
@@ -378,9 +378,10 @@ body {
     position: relative; }
   .story__img {
     height: 100%;
-    transform: translateX(-4rem) scale(1.4);
+    transform: scale(1.4);
     backface-visibility: hidden;
-    transition: all .5s; }
+    transition: all .5s;
+    width: 100%; }
   .story__text {
     transform: skewX(12deg); }
   .story__caption {
@@ -398,8 +399,8 @@ body {
   .story:hover .story__caption {
     opacity: 1;
     transform: translate(-50%, -50%); }
-  .story__hover .story__img {
-    transform: translateX(-4rem) scale(1);
+  .story:hover .story__img {
+    transform: scale(1);
     filter: blur(3px) brightness(80%); }
 
 .bg-video {
@@ -563,6 +564,8 @@ body {
   .footer__link:hover, .footer__link:active {
     color: #0153C3;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4); }
+  .footer__copyright, .footer__navigation {
+    text-align: center; }
 
 .navigation__checkbox {
   display: none; }
@@ -599,7 +602,8 @@ body {
   z-index: 1500;
   opacity: 0;
   width: 0;
-  transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+  transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  visibility: hidden; }
 
 .navigation__list {
   position: absolute;
@@ -634,7 +638,8 @@ body {
 
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
-  width: 100%; }
+  width: 100%;
+  visibility: visible; }
 
 .navigation__icon {
   position: relative;
