--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,6 @@
 .section-about{
     background-color:$lightgrey-1;
-    padding:25rem 0;
+    padding:25rem 0 30rem 0;
     margin-top:-25vh;
 
 }
@@ -9,7 +9,7 @@
     background-image:   linear-gradient(to right bottom, rgba(0, 0, 128, 0.8),rgba(10, 166, 244,0.8)), url('https://images.unsplash.com/photo-1534406315430-4d7cf92bc690?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80');
    background-size:cover;
    transform:skewY(-5deg);
-   margin-top:-1rem;
+   margin-top:-8rem;
    & > * {
        transform:skewY(5deg);
    }
