--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -24,9 +24,10 @@
     }
     &__img{
         height:100%;
-        transform:translateX(-4rem) scale(1.4);
+        transform: scale(1.4);
         backface-visibility: hidden;
         transition:all .5s;
+        width:100%;
     }
   
     &__text{
@@ -52,7 +53,7 @@
     }
 
     &:hover &__img{
-        transform:translateX(-4rem) scale(1);
+        transform: scale(1);
         filter:blur(3px) brightness(80%);
     }
 
